--- a/WebSite1/WebSite1/galeria1-Giovani.html
+++ b/WebSite1/WebSite1/galeria1-Giovani.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="utf-8" />
-    <title></title>
+    <title>Las 7 maravillas del mundo</title>
 </head>
 <body>
 
