texto lorem ipsum....

--- a/WebSite1/WebSite1/galeria1-Giovani.html
+++ b/WebSite1/WebSite1/galeria1-Giovani.html
@@ -5,6 +5,14 @@
     <title>Las 7 maravillas del mundo</title>
 </head>
 <body>
-    <p>lorem</p>
+    <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris nec risus eu lorem suscipit molestie. Cras at hendrerit nibh, et volutpat nisl. Curabitur varius nibh magna, ut porta sem congue ac. Sed volutpat urna vitae nulla vulputate feugiat. Donec augue orci, iaculis vitae risus cursus, ultrices pulvinar risus. Sed scelerisque, nibh id elementum consectetur, eros justo aliquam risus, et ultrices diam odio et est. Donec rutrum velit magna, non fringilla nibh rhoncus et.
+
+        Suspendisse congue vehicula ornare. Mauris tincidunt odio sed dignissim pharetra. Duis gravida tempus quam, ut fringilla dui fringilla eu. Phasellus aliquet justo id purus feugiat auctor. Mauris egestas nulla suscipit consequat euismod. Quisque pellentesque diam sit amet lacus porttitor facilisis. Morbi blandit diam sit amet enim malesuada, pretium congue mauris sollicitudin.
+
+        Ut hendrerit elementum turpis quis vulputate. Mauris suscipit ac nisi varius rutrum. Curabitur aliquet ante ac leo convallis, vel pellentesque dui feugiat. Pellentesque ut est dictum turpis efficitur luctus in vitae ligula. Cras eu quam nec dolor dignissim rutrum. Sed nec sagittis lacus. Sed ac tempor metus. Phasellus a magna sit amet eros aliquet varius. Vivamus non tellus sed erat convallis accumsan. Phasellus nec hendrerit dolor. Praesent porttitor lobortis enim eu vulputate. Pellentesque arcu sapien, laoreet at sapien in, porttitor sagittis est.
+
+        Integer ultrices pulvinar tortor et consectetur. Praesent molestie tellus rutrum dapibus porttitor. Curabitur consequat leo nec efficitur tempor. Nunc augue odio, ultricies id rutrum lacinia, tincidunt sed velit. Etiam lacinia, elit aliquam pellentesque molestie, enim orci suscipit dolor, a consectetur risus libero id leo. Curabitur dictum lectus leo, eu tincidunt enim finibus a. Duis ex enim, efficitur in odio in, finibus lacinia dui. Aliquam erat volutpat. Pellentesque pretium, orci quis auctor fermentum, purus odio tempor est, eu commodo nunc ante in libero. Sed rhoncus odio diam, quis laoreet est porttitor sit amet. Ut tempus odio lorem, vel blandit mi pretium et. Integer commodo risus quis tellus tempus pulvinar.
+    </p>
 </body>
 </html>
